# Madness

./: .gitignore  CMakeLists.txt  README.md  drawGrid.hpp  entity.hpp  main.cpp  mob.hpp  player.hpp  test.cpp  title.hpp
src/: cultist.cpp  cultist.hpp  entity.cpp  entity.hpp  madness.cpp  mob.cpp  mob.hpp  player.cpp  player.hpp
